kube-training/ds2.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  annotations:
    deprecated.daemonset.template.generation: "3"
  creationTimestamp: "2022-02-23T15:19:10Z"
  generation: 4
  name: ds-two
  namespace: default
  resourceVersion: "42223"
  uid: 00fe552a-21e9-4aa8-b6b5-e74e25cff113
spec:
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      system: DaemonSetOne
  template:
    metadata:
      creationTimestamp: null
      labels:
        system: DaemonSetOne
    spec:
      containers:
      - image: nginx:1.15.1
        imagePullPolicy: IfNotPresent
        name: nginx
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  updateStrategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate 
status:
  currentNumberScheduled: 1
  desiredNumberScheduled: 1
  numberAvailable: 1
  numberMisscheduled: 0
  numberReady: 1
  observedGeneration: 4
  updatedNumberScheduled: 1
