kube-training/nettool.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nettool
spec:
  containers:
  - name: ubuntu
    image: ubuntu:latest
    command: [ "sleep" ]
    args: [ "infinity" ]
