kube-training/review-pod-webone.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webone
  labels:
    app: webone-app
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
