kube-training/review-pod-webtwo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webtwo
  labels:
    app: webtwo-app
spec:
  containers:
  - name: website 
    image: wlniao/website 
    ports:
    - containerPort: 80
